--- a/Client/Shared/Modal_CSS.html
+++ b/Client/Shared/Modal_CSS.html
@@ -59,7 +59,7 @@
     overflow-y: auto; /* Allow scrolling for long content */
   }
   
-  /* Styles for Modal Navigation Buttons */
+  /* Styles for Modal Navigation Buttons (Step 21) */
   .modal-navigation {
       margin-top: 20px;
       padding-top: 15px;
