--- a/Client/Admin/AdminView.html
+++ b/Client/Admin/AdminView.html
@@ -4,8 +4,8 @@
     <base target="_top">
     <title>Admin Dashboard</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.0/fabric.min.js"></script>
-    <!-- Add YouTube Player API script -->
-    <script src="https://www.youtube.com/iframe_api"></script>
+    <!-- Add YouTube Player API script (Needed if you ever add YT previews here) -->
+    <!-- <script src="https://www.youtube.com/iframe_api"></script> --> 
     <style>
       body { font-family: Arial, sans-serif; margin: 20px; background-color: #f4f4f4; color: #333; }
       .container { background-color: #fff; padding: 20px; margin-bottom: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
@@ -260,8 +260,6 @@
             
             <label for="imageUploader">Image Background:</label>
             <input type="file" id="imageUploader" accept="image/*">
-            <!-- Optional: Add button if not auto-applying on upload -->
-            <!-- <button id="setImageBackgroundButton">Set Image BG</button> -->
 
             <hr style="margin: 20px 0;">
 
@@ -273,8 +271,6 @@
 
             <label for="audioUploader">Attach Slide Audio:</label>
             <input type="file" id="audioUploader" accept="audio/*">
-            <!-- Removed Attach button - will trigger on file selection -->
-            <!-- <button id="attachAudioButton">Attach Audio File</button>  -->
             <span id="attachedAudioName" style="margin-left: 10px; font-style: italic;"></span>
             <button id="removeAudioButton" style="display:none; margin-left: 5px; background-color: #ffc107; color: black; padding: 5px 8px; font-size: 0.8em;">Remove Audio</button>
 
@@ -411,6 +407,7 @@
     <div id="messageArea"></div>
 
     <?!= include('Client/Shared/LoadingSpinner'); ?>
+    <!-- **** CORRECT SCRIPT INCLUDE FOR ADMIN **** -->
     <?!= include('Client/Admin/Admin_JS'); ?> 
   </body>
 </html>
