--- a/Client/Admin/AdminView.html
+++ b/Client/Admin/AdminView.html
@@ -6,6 +6,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.0/fabric.min.js"></script>
     <!-- Add YouTube Player API script (Needed if you ever add YT previews here) -->
     <!-- <script src="https://www.youtube.com/iframe_api"></script> --> 
+    <!-- Step 22: Add Google API Client Library for Picker -->
+    <script async defer src="https://apis.google.com/js/api.js" onload="adminApp.handleGoogleApiLoad()"></script>
     <style>
       body { font-family: Arial, sans-serif; margin: 20px; background-color: #f4f4f4; color: #333; }
       .container { background-color: #fff; padding: 20px; margin-bottom: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
@@ -258,8 +260,10 @@
         <div class="edit-controls-group">
             <h3>Current Slide Settings / Media</h3>
             
-            <label for="imageUploader">Image Background:</label>
+            <label for="imageUploader">Image Background (Upload):</label>
             <input type="file" id="imageUploader" accept="image/*">
+
+            <button id="attachFromDriveButton" style="margin-top: 5px;">Attach Image/Audio from Drive</button>
 
             <hr style="margin: 20px 0;">
 
@@ -269,7 +273,7 @@
 
             <hr style="margin: 20px 0;">
 
-            <label for="audioUploader">Attach Slide Audio:</label>
+            <label for="audioUploader">Attach Slide Audio (Upload):</label>
             <input type="file" id="audioUploader" accept="audio/*">
             <span id="attachedAudioName" style="margin-left: 10px; font-style: italic;"></span>
             <button id="removeAudioButton" style="display:none; margin-left: 5px; background-color: #ffc107; color: black; padding: 5px 8px; font-size: 0.8em;">Remove Audio</button>
